Tring to add a user at startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=SpringSecEx
 server.port=8765
 spring.security.user.name=daksh
 spring.security.user.password=daksh1
+spring.data.mongodb.database=users
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
